--- a/index.html
+++ b/index.html
@@ -14,230 +14,291 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <nav class="nav">
-        <!--Logo-посилання з текстом-->
-        <a class="nav-logo" href="./index.html"
-          >Web<span class="nav-logo-part">Studio</span></a
-        >
+    <header class="page-header">
+      <div class="container main-nav">
+        <nav class="nav">
+          <!--Logo-посилання з текстом-->
 
-        <!--Menu nav-->
-        <ul>
-          <li><a class="nav-link" href="./index.html">Studio</a></li>
-          <li><a class="nav-link" href="">Portfolio</a></li>
-          <li><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+          <div class="container header-logo">
+            <a class="nav-logo" href="./index.html"
+              >Web<span class="nav-logo-part">Studio</span></a
+            >
+          </div>
 
-      <address class="address">
-        <ul>
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          <!--Menu nav-->
+          <ul class="site-nav">
+            <li class="item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+
+        <!--Contacts-->
+        <address class="address">
+          <ul class="contacts-list">
+            <li class="item">
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!--Section 1-->
-      <section class="main-page">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
+      <section class="section hero">
+        <div class="container">
+          <h1 class="page-title">Effective Solutions for Your Business</h1>
 
-        <button class="main-button" type="button">Order Service</button>
+          <button class="main-button" type="button">Order Service</button>
+        </div>
       </section>
 
       <!--Section 2-->
-      <section class="advantages">
-        <h2 class="advantages-title">Advantages</h2>
+      <section class="section">
+        <div class="container">
+          <div class="visually-hidden">
+            <h2 class="advantages-title">Advantages</h2>
+          </div>
 
-        <ul>
-          <li>
-            <h3 class="feature-title">Strategy</h3>
-            <p class="feature-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Punctuality</h3>
-            <p class="feature-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Diligence</h3>
-            <p class="feature-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Technologies</h3>
-            <p class="feature-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+          <ul class="feature-list">
+            <li class="item">
+              <h3 class="feature-title">Strategy</h3>
+              <p class="feature-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="feature-title">Punctuality</h3>
+              <p class="feature-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="feature-title">Diligence</h3>
+              <p class="feature-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="feature-title">Technologies</h3>
+              <p class="feature-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section 3-->
 
-      <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul>
-          <!--Person 1-->
-          <li class="team-card">
-            <img
-              src="./images/p-1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-title">Mark Guerrero</h3>
-            <p class="team-card-text">Product Designer</p>
-          </li>
+      <section class="section team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="card-set">
+            <!--Person 1-->
+            <li class="item">
+              <img
+                src="./images/p-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="team-card-title">Mark Guerrero</h3>
+                <p class="team-card-text">Product Designer</p>
+              </div>
+            </li>
 
-          <!--Person 2-->
-          <li class="team-card">
-            <img
-              src="./images/p-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-title">Tom Ford</h3>
-            <p class="team-card-text">Frontend Developer</p>
-          </li>
+            <!--Person 2-->
+            <li class="item">
+              <img
+                src="./images/p-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="team-card-title">Tom Ford</h3>
+                <p class="team-card-text">Frontend Developer</p>
+              </div>
+            </li>
 
-          <!--Person 3-->
-          <li class="team-card">
-            <img
-              src="./images/p-3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-title">Camila Garcia</h3>
-            <p class="team-card-text">Marketing</p>
-          </li>
+            <!--Person 3-->
+            <li class="item">
+              <img
+                src="./images/p-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="team-card-title">Camila Garcia</h3>
+                <p class="team-card-text">Marketing</p>
+              </div>
+            </li>
 
-          <!--Person 4-->
-          <li class="team-card">
-            <img
-              src="./images/p-4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-title">Daniel Wilson</h3>
-            <p class="team-card-text">UI Designer</p>
-          </li>
-        </ul>
+            <!--Person 4-->
+            <li class="item">
+              <img
+                src="./images/p-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="team-card-title">Daniel Wilson</h3>
+                <p class="team-card-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section 4-->
 
-      <section class="project">
-        <h2 class="project-title">Our Portfolio</h2>
-        <ul>
-          <!--Project card 1-->
-          <li class="project-card">
-            <img
-              src="./images/pc-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-title">Banking App</h3>
-            <p class="project-card-text">App</p>
-          </li>
+      <section class="section portfolio">
+        <div class="container">
+          <h2 class="project-title">Our Portfolio</h2>
+          <ul class="project-set">
+            <!--Project card 1-->
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/pc-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="card-content">
+                <h3 class="project-card-title">Banking App</h3>
+                <p class="project-card-text">App</p>
+              </div>
+            </li>
 
-          <!--Project card 2-->
-          <li class="project-card">
-            <img
-              src="./images/pc-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-title">Cashless Payment</h3>
-            <p class="project-card-text">Marketing</p>
-          </li>
+            <!--Project card 2-->
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/pc-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="card-content">
+                <h3 class="project-card-title">Cashless Payment</h3>
+                <p class="project-card-text">Marketing</p>
+              </div>
+            </li>
 
-          <!--Project card 3-->
-          <li class="project-card">
-            <img
-              src="./images/pc-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-title">Meditation App</h3>
-            <p class="project-card-text">App</p>
-          </li>
+            <!--Project card 3-->
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/pc-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="card-content">
+                <h3 class="project-card-title">Meditation App</h3>
+                <p class="project-card-text">App</p>
+              </div>
+            </li>
 
-          <!--Project card 4-->
-          <li class="project-card">
-            <img
-              src="./images/pc-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-title">Taxi Service</h3>
-            <p class="project-card-text">Marketing</p>
-          </li>
+            <!--Project card 4-->
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/pc-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="card-content">
+                <h3 class="project-card-title">Taxi Service</h3>
+                <p class="project-card-text">Marketing</p>
+              </div>
+            </li>
 
-          <!--Project card 5-->
-          <li class="project-card">
-            <img
-              src="./images/pc-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-title">Screen Illustrations</h3>
-            <p class="project-card-text">Design</p>
-          </li>
+            <!--Project card 5-->
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/pc-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="card-content">
+                <h3 class="project-card-title">Screen Illustrations</h3>
+                <p class="project-card-text">Design</p>
+              </div>
+            </li>
 
-          <!--Project card 6-->
-          <li class="project-card">
-            <img
-              src="./images/pc-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="project-card-title">Online Courses</h3>
-            <p class="project-card-text">Marketing</p>
-          </li>
-        </ul>
+            <!--Project card 6-->
+            <li class="item">
+              <div class="thumb">
+                <img
+                  src="./images/pc-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+              </div>
+              <div class="card-content">
+                <h3 class="project-card-title">Online Courses</h3>
+                <p class="project-card-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="footer">
-      <!--Logo-посилання з текстом-->
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
+    <footer class="section footer">
+      <div class="container">
+        <!--Logo-посилання з текстом-->
 
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <div class="footer-content">
+          <div class="container second-logo-content">
+            <a class="footer-logo" href="./index.html"
+              >Web<span class="footer-logo-part">Studio</span></a
+            >
+          </div>
+
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
