--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -74,9 +75,7 @@
       <!--Section 2-->
       <section class="section">
         <div class="container">
-          <div class="visually-hidden">
-            <h2 class="advantages-title">Advantages</h2>
-          </div>
+          <h2 class="advantages-title">Advantages</h2>
 
           <ul class="feature-list">
             <li class="item">
@@ -192,7 +191,7 @@
                   height="300"
                 />
               </div>
-              <div class="card-content">
+              <div class="set-content">
                 <h3 class="project-card-title">Banking App</h3>
                 <p class="project-card-text">App</p>
               </div>
@@ -208,7 +207,7 @@
                   height="300"
                 />
               </div>
-              <div class="card-content">
+              <div class="set-content">
                 <h3 class="project-card-title">Cashless Payment</h3>
                 <p class="project-card-text">Marketing</p>
               </div>
@@ -224,7 +223,7 @@
                   height="300"
                 />
               </div>
-              <div class="card-content">
+              <div class="set-content">
                 <h3 class="project-card-title">Meditation App</h3>
                 <p class="project-card-text">App</p>
               </div>
@@ -240,7 +239,7 @@
                   height="300"
                 />
               </div>
-              <div class="card-content">
+              <div class="set-content">
                 <h3 class="project-card-title">Taxi Service</h3>
                 <p class="project-card-text">Marketing</p>
               </div>
@@ -256,7 +255,7 @@
                   height="300"
                 />
               </div>
-              <div class="card-content">
+              <div class="set-content">
                 <h3 class="project-card-title">Screen Illustrations</h3>
                 <p class="project-card-text">Design</p>
               </div>
@@ -272,7 +271,7 @@
                   height="300"
                 />
               </div>
-              <div class="card-content">
+              <div class="set-content">
                 <h3 class="project-card-title">Online Courses</h3>
                 <p class="project-card-text">Marketing</p>
               </div>
@@ -284,20 +283,15 @@
 
     <footer class="section footer">
       <div class="container">
-        <!--Logo-посилання з текстом-->
-
-        <div class="footer-content">
-          <div class="container second-logo-content">
-            <a class="footer-logo" href="./index.html"
-              >Web<span class="footer-logo-part">Studio</span></a
-            >
-          </div>
-
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="container footer-logo-content">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
         </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
