--- a/index.html
+++ b/index.html
@@ -12,27 +12,22 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="page-header">
       <div class="container main-nav">
-        <nav class="nav">
-          <!--Logo-посилання з текстом-->
-
-          <div class="container header-logo">
-            <a class="nav-logo" href="./index.html"
-              >Web<span class="nav-logo-part">Studio</span></a
-            >
-          </div>
+        <nav class="nav-content">
+          <a class="nav-logo" href="./index.html"
+            >Web<span class="nav-logo-part">Studio</span></a
+          >
 
           <!--Menu nav-->
           <ul class="site-nav">
@@ -183,14 +178,13 @@
           <ul class="project-set">
             <!--Project card 1-->
             <li class="item">
-              <div class="thumb">
-                <img
-                  src="./images/pc-1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-              </div>
+              <img
+                src="./images/pc-1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+
               <div class="set-content">
                 <h3 class="project-card-title">Banking App</h3>
                 <p class="project-card-text">App</p>
@@ -283,11 +277,10 @@
 
     <footer class="section footer">
       <div class="container">
-        <div class="container footer-logo-content">
-          <a class="footer-logo" href="./index.html"
-            >Web<span class="footer-logo-part">Studio</span></a
-          >
-        </div>
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
